# airbnb-clone-challenge

./: api-specs.md  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tweet_payload.py
tweets/templates/: tweets.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_is_host_user_avatar_alter_user_password.py
